<resources>
    <string name="app_name">Our-Story</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="txt_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google">google</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create Account</string>
    <string name="back">back</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_book">Favorite Book</string>
    <string name="image_book">Image Book</string>
    <string name="tittle_book">Tittle Book</string>
    <string name="catatan">This book should have a great stroies beside of the genre</string>
    <string name="button_read">Read This Book</string>
    <string name="our_story">OUR STORY</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="menu_signout">Sign Out</string>
    <string name="name_profile">name</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="recently_read">Recently Read</string>
    <string name="descripton_book">Descripton Book</string>
    <string name="name_book">Name Book</string>
    <string name="save">Save</string>
    <string name="edit_firstname">Firstname</string>
    <string name="edit_lastname">Lastname</string>
    <string name="change_photo_profile">Change Photo</string>
    <string name="book_title">Book Title</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="remove_favorite">Remove</string>
    <string name="title">Title</string>
    <string name="part">Part</string>
    <string name="numparts">numParts</string>
    <string name="_10">10</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="penulis">Penulis</string>
    <string name="ditulis">Ditulis</string>
</resources>