<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/txt_login"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="35sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_login"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="20"
            android:layout_gravity="center"
            android:hint="@string/email_address"
            android:autofillHints="Email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text_input_layout"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="20"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:autofillHints="Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:background="@drawable/custom_background_button"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        />

    <ImageButton
        android:id="@+id/google_button"
        android:layout_below="@+id/button_login"
        android:layout_centerVertical="true"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/google"
        android:contentDescription="@string/google" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_centerVertical="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="37dp"
        android:layout_toEndOf="@+id/google_button"
        android:background="@drawable/custom_background_button"
        style="style"
        android:text="@string/signup"
        android:textColor="@color/white"
        />
    
</RelativeLayout>