<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="20"
            android:layout_gravity="center"
            android:hint="@string/email_address"
            android:background="#00000000"
            android:autofillHints="Email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text_input_layout"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="20"
            android:layout_gravity="center"
            android:hint="@string/first_name"
            android:background="#00000000"
            android:autofillHints="First Name"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_text_input_layout"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="20"
            android:layout_gravity="center"
            android:hint="@string/last_name"
            android:background="#00000000"
            android:autofillHints="Lastname"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_text_input_layout"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="20"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:background="#00000000"
            android:autofillHints="Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text_input_layout"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="20"
            android:layout_gravity="center"
            android:hint="@string/confirm_password"
            android:background="#00000000"
            android:autofillHints="Confirm Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:background="@drawable/custom_background_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password_input_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:text="@string/register" />

    <ImageButton
        android:id="@+id/google_button"
        android:layout_below="@+id/register_button"
        android:layout_centerVertical="true"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/google"
        android:contentDescription="@string/google" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_button"
        android:layout_centerVertical="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="37dp"
        android:layout_toEndOf="@+id/google_button"
        android:background="@drawable/custom_background_button"
        android:text="@string/login"
        />
</RelativeLayout>