<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:padding="16dp"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/desccription"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/name_book"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_Rating"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/text_Rating"
                android:text="@string/_10"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>