<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools= "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        tools:src="@drawable/profile" />

    <Button
        android:id="@+id/button_change_profile"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/image_profile"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:text="@string/change_photo_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_background_button"/>


    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_firstname"
        android:layout_marginTop="15dp"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:background="@drawable/custom_background_button"/>

    <EditText
        android:id="@+id/edit_firstname"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:layout_marginEnd="20dp"
        android:inputType="textPersonName"
        android:layout_below="@+id/button_change_profile"
        android:textAlignment="center"
        android:text="@string/edit_firstname"
        android:layout_marginLeft="10dp"
        android:autofillHints="Fullname"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edit_lastname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:layout_below="@+id/button_change_profile"
        android:layout_toEndOf="@+id/edit_firstname"
        android:textAlignment="center"
        android:text="@string/edit_lastname"
        android:layout_above="@+id/button_save"
        android:autofillHints="lastname"
        tools:ignore="LabelFor" />
</RelativeLayout>