<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp" >

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        tools:src="@android:color/darker_gray"
        android:contentDescription="@string/image_book" />
    
    <LinearLayout
        android:id="@+id/desccription"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/name_book"/>
        <TextView
            android:id="@+id/penulis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="Penulis"/>
        <Button
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/remove_favorite"/>
    </LinearLayout>

</RelativeLayout>