<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_book"
                android:layout_width="250dp"
                android:layout_height="320dp"
                android:background="#2d2d2d"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/book_title" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/title"
                android:layout_marginTop="15dp"
                android:layout_marginStart="70dp"
                android:layout_below="@+id/img_book"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/text_title"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_below="@+id/img_book"
                android:text="@string/book_title"/>


            <TextView
                android:id="@+id/text_part"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_below="@+id/tv_title"
                android:layout_marginStart="70dp"
                android:text="@string/part"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_part"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/numparts"
                android:layout_below="@+id/tv_title"
                android:layout_toEndOf="@+id/text_part"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/text_penulis"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_below="@+id/text_part"
                android:layout_above="@+id/tv_description"
                android:layout_marginStart="70dp"
                android:text="@string/ditulis"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_penulis"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/penulis"
                android:layout_below="@+id/tv_part"
                android:layout_above="@+id/desccription"
                android:layout_toEndOf="@+id/text_part"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_penulis"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:text="@string/description"
                android:textSize="15sp"/>

            <ImageButton
                android:id="@+id/share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#00000000"
                android:layout_marginStart="190dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tv_description"
                android:src="@drawable/share" />

            <ImageButton
                android:id="@+id/favorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="140dp"
                android:background="#00000000"
                android:src="@drawable/star"
                android:text="Favorite"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tv_description"/>

            <TextView
                android:id="@+id/text_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_description"
                android:layout_marginTop="73dp"
                android:text="List Part"
                android:textAlignment="center"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/part"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/text_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_list_part"/>


        </RelativeLayout>
    </ScrollView>

</FrameLayout>